tests/ui_fail/different_trait_params.stderr
error: Conflicting implementations of `impl Kita for _ŠČ0`
  --> tests/ui_fail/different_trait_params.rs:23:1
   |
23 | / disjoint_impls! {
24 | |     pub trait Kita {
25 | |         const NAME: &'static str;
...  |
34 | | }
   | |_^
   |
   = note: this error originates in the macro `disjoint_impls` (in Nightly builds, run with -Z macro-backtrace for more info)
